# harvester

./: .gitignore  LICENSE  Makefile  pyproject.toml  requirements.txt
harvester/services/: preprocessing.ipynb
harvester/services/crawlers/: aldi_reviews.csv
harvester/services/crawlers/crawlers/: config.py  items.py  settings.py
harvester/services/crawlers/crawlers/spiders/: trustpilot_alti_reviews.py
harvester/services/ml_algorithms/: abstract_strategy.py  ml_appliances.py
harvester/services/pipelines/: ml_appliances.py  preprocess.ipynb  preprocessor.py  reviews_preprocessor.py
harvester/services/pipelines/ml_algorithms/: ml_appliances.py
harvester/services/pipelines/preprocessor/: preprocessing_handler.py  reviews_preprocessor.py
harvester/services/preprocessor/: abstract_handler.py  preprocessing_handler.py  reviews_preprocessor.py
harvester/tests/integration/: test_preprocessor.py
harvester/tests/unit/: conftest.py  test_ml_appliances.py  test_preprocessor.py
reviews/: config.py
reviews/reviews/: items.py  settings.py
reviews/reviews/spiders/: aldi_reviews_spider.py
